tests/rgs/valid/named_story_no_phases.rgs
STORY combat PRIORITY 2.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    AGENT Guard:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
