tests/rgs/semantic_errors/undeclared_story.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING patrol:
    WHEN spotted ENVIRONMENT:
        DO run.
